# MegaDLMs

./: .gitignore  Justfile  pyproject.toml
examples/data_prep/: push_bins_hf.py  simplestories_prep.py
examples/dlm_training/: dlm_pretrain_simplestories_8k.sh  dlm_pretrain_simplestories_8k_sweep.yaml
scripts/: bootstrap_apex.sh  bootstrap_remote.sh  download_simplestories_data.sh  run_sweep_train_remote.sh  run_train_remote.sh  sweep_difflm.py
