# Copyright (c) 2023, NVIDIA CORPORATION.  All rights reserved.

[build-system]
requires = [
    "setuptools",
    "pybind11",
]

[project]
name = "mega-dlms"
dynamic = ["version"]
description = "GPU-optimized codebase for training diffusion language models at any scale."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "Jinjie Ni", email = "jinjieni@outlook.com" }]
keywords = [
    "NLP",
    "NLU",
    "deep",
    "gpu",
    "language",
    "learning",
    "learning",
    "machine",
    "nvidia",
    "pytorch",
    "torch",
    "transformer",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "aiohttp==3.10.10",
    "black==24.10.0",
    "blinker==1.7.0",
    "cmake==3.31.0.1",
    "cudf-polars-cu12==25.12.0",
    "cugraph-cu12==25.12.2",
    "cuml-cu12==25.12.*",
    "datasets==3.6.0",
    "dbus-python==1.3.2",
    "distro==1.9.0",
    "expecttest==0.2.1",
    "flash-attn==2.4.2",
    "fqdn==1.5.1",
    "hypothesis==5.35.1",
    "isoduration==20.11.0",
    "isort==5.13.2",
    "jsonpointer==3.0.0",
    "jupyterlab-code-formatter==3.0.2",
    "jupyterlab-tensorboard-pro==4.0.0",
    "jupytext==1.16.4",
    "kvikio==24.10.0",
    "launchpadlib==1.11.0",
    "libkvikio==24.10.0",
    "librmm==24.10.0",
    "librosa==0.10.1",
    "lightning-thunder==0.2.0.dev0",
    "lintrunner==0.12.5",
    "mkl-devel==2021.1.1",
    "mock==5.1.0",
    "notebook==7.2.2",
    "nvfuser==0.2.13a0+0d33366",
    "nvidia-cudnn-frontend==1.8.0",
    "nvidia-dali-cuda120==1.43.0",
    "nvidia-modelopt==0.19.0",
    "nvidia-pyindex==1.0.9",
    "nx-cugraph-cu12==25.12.*",
    "oauthlib==3.2.2",
    "onnx==1.17.0",
    "opencv==4.10.0",
    "oss2==2.19.1",
    "polygraphy==0.49.13",
    "pulp==2.9.0",
    "pybind11==2.13.6",
    "pybind11-global==2.13.6",
    "pycocotools==2.0+nv0.8.1",
    "pygobject==3.48.2",
    "pyjwt==2.7.0",
    "pylibwholegraph==24.10.0",
    "pytest-flakefinder==1.1.0",
    "pytest-rerunfailures==14.0",
    "pytest-shard==0.1.2",
    "pytest-xdist==3.6.1",
    "python-hostlist==2.0.0",
    "pytorch-triton==3.0.0+72734f086",
    "spacy==3.7.5",
    "ssh-import-id==5.11",
    "tabulate==0.9.0",
    "tensorboard==2.16.2",
    "tensorrt==10.6.0",
    "torch==2.4.*",
    "torch-tensorrt==2.6.0a0",
    "torchprofile==0.0.4",
    "transformer-engine==1.12.0+7f2afaa",
    "transformers==4.51.3",
    "types-dataclasses==0.6.6",
    "uri-template==1.3.0",
    "wadllib==1.3.6",
    "wandb==0.19.11",
    "webcolors==24.11.1",
    "xdoctest==1.0.2",
    "xgboost==2.1.1",
    "zstandard==0.23.0",
]

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[project.urls]
Download = "https://github.com/JinjieNi/MegaDLMs/releases"

[tool.isort]
profile = "black"  # black-compatible
line_length = 100  # should match black parameters
py_version = 310  # python 3.8 as a target version
known_first_party = ["megatron"]  # FIRSTPARTY section
known_third_party = ["transformer_engine"]  # THIRDPARTY section
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
extend_skip = ["setup.py"]

[tool.black]
line_length = 100
skip_string_normalization = true
# recongized by future versions, disallows to reformat code with incompatible versions
# Matches NeMO version so people working on both codebases don't need two different version of black installed
required_version = "24"  
skip_magic_trailing_comma = true
