# Copyright (c) 2023, NVIDIA CORPORATION.  All rights reserved.

[build-system]
requires = [
    "setuptools",
    "pybind11",
]

[project]
name = "mega-dlms"
requires-python = "==3.10.*"
dynamic = ["version"]
description = "GPU-optimized codebase for training diffusion language models at any scale."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "Jinjie Ni", email = "jinjieni@outlook.com" }]
keywords = [
    "NLP",
    "NLU",
    "deep",
    "gpu",
    "language",
    "learning",
    "learning",
    "machine",
    "nvidia",
    "pytorch",
    "torch",
    "transformer",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "setuptools<80.0.0,>=77.0.0",
    "packaging>=24.2",
    "megatron-core[mlm,lts]",
    "pandas==2.2.3",
    "pybind11==2.13.6",
    "tensorboard==2.16.2",
    "transformer-engine[pytorch]",
    "wandb==0.19.11",
]


[project.urls]
Download = "https://github.com/JinjieNi/MegaDLMs/releases"

[tool.isort]
profile = "black"  # black-compatible
line_length = 100  # should match black parameters
py_version = 310  # python 3.8 as a target version
known_first_party = ["megatron"]  # FIRSTPARTY section
known_third_party = ["transformer_engine"]  # THIRDPARTY section
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
extend_skip = ["setup.py"]

[tool.black]
line_length = 100
skip_string_normalization = true
# recongized by future versions, disallows to reformat code with incompatible versions
# Matches NeMO version so people working on both codebases don't need two different version of black installed
required_version = "24"  
skip_magic_trailing_comma = true
